manifests/base/loadgenerator/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: loadgenerator
  namespace: loadgenerator
spec:
  host: loadgenerator.loadgenerator.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
