manifests/base/loadgenerator/istio/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: loadgenerator
  namespace: loadgenerator
spec:
  workloadSelector:
    labels:
      app: loadgenerator
  egress:
    - hosts:
        - "istio-system/*"
        - "frontend/*"
