manifests/base/loadgenerator/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: loadgenerator
  namespace: loadgenerator
spec: {}
